# GEMQ

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/deepseek-ai/DeepSeek-V2-Lite/GEMQ/: C4-Seed0_E1.5_B1,2,3_c2c3.pkl  C4-Seed0_E2.0_B1,2,3_c2c3.pkl  C4-Seed0_E2.5_B1,2,3_c2c3.pkl
configs/mistralai/Mixtral-8x7B-v0.1/GEMQ/: C4-Seed0_E1.5_B1,2,3_c2c3.pkl  C4-Seed0_E2.0_B1,2,3_c2c3.pkl  C4-Seed0_E2.5_B1,2,3_c2c3.pkl
gemq/: allocate_bits.py  benchmark_generate.py  compute_model_stats.py  quantize.py
gemq/allocation/: ilp_solvers.py
gemq/inference/: kv_cache.py  moe_block.py  patch.py
gemq/quantizers/: gptq.py  rtn.py
gemq/triton_kernels/: dequant_gemm.py  dequant_gemv.py  dequant_group_gemm.py  fused_dequant_bmm.py  utils.py
gemq/utils/: data_utils.py  eval_utils.py  model_utils.py  quant_utils.py
scripts/: allocate_deepseekv2.sh  allocate_mixtral.sh  bench_generate_deepseekv2.sh  bench_generate_mixtral.sh  compute_stats_deepseekv2.sh  compute_stats_mixtral.sh  quantize_deepseekv2.sh  quantize_mixtral.sh
